--- a/WWDC Scholars 2015/WWDC Scholars 2015/Info.plist
+++ b/WWDC Scholars 2015/WWDC Scholars 2015/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>AndrewWalker.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>geleichen.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
