--- a/WWDC Scholars 2015/WWDC Scholars 2015/WWDC Scholars 2015.entitlements
+++ b/WWDC Scholars 2015/WWDC Scholars 2015/WWDC Scholars 2015.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.wwdcscholars</string>
+		<string>group.wwdcscholars.2015</string>
 	</array>
 </dict>
 </plist>
