--- a/WWDC Scholars 2015/WWDC Scholars 2015 WatchKit Extension/Info.plist
+++ b/WWDC Scholars 2015/WWDC Scholars 2015 WatchKit Extension/Info.plist
@@ -34,5 +34,9 @@
 	</dict>
 	<key>RemoteInterfacePrincipalClass</key>
 	<string>$(PRODUCT_MODULE_NAME).InterfaceController</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>FontAwesome.otf</string>
+	</array>
 </dict>
 </plist>
