Rename the watch app

--- a/WWDC Scholars 2015/WWDC Scholars 2015 WatchKit App/Info.plist
+++ b/WWDC Scholars 2015/WWDC Scholars 2015 WatchKit App/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>WWDC Scholars 2015</string>
+	<string>Scholars</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
